--- a/index.html
+++ b/index.html
@@ -19,47 +19,58 @@
 </head>
 <body>
   <main>
-    <hgroup>
-      <h1>Learn to code by watching others</h1>
-      <p>
-        See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
-        but understanding how developers think is invaluable.
-      </p>
-    </hgroup>
-    <p class="try-it"><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
-    <div class="form-container">
-      <form action="">
-        <ul style="list-style-type: none;">
-          <li>
-            <label for="name" class="visually-hidden">First Name</label>
-            <input type="text" name="f-name" id="f-name" placeholder="First Name">
-          </li>
-          <li>
-            <label for="last name" class="visually-hidden">Last Name</label>
-            <input type="text" name="l-name" id="l-name" placeholder="Last Name">
-          </li>
-          <li>
-            <label for="Email" class="visually-hidden">Email Address</label>
-            <input type="text" name="email" id="email" placeholder="Email Address">
-          </li>
-          <li>
-            <label for="name" class="visually-hidden">Password</label>
-            <input type="text" name="f-name" id="f-name" placeholder="Password">
-          </li>
-          <li>
-            <button type="submit" value="Claim your free trial">Claim your free trial</button>
-          </li>
-        </ul>
-      </form>
-      <p>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></p>
-    </div>
+    <section>
+      <hgroup>
+        <h1>Learn to code by watching others</h1>
+        <p>
+          See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+          but understanding how developers think is invaluable.
+        </p>
+      </hgroup>
+      <p class="try-it"><strong>Try it free 7 days</strong> <span>then $20/mo. thereafter</span></p>
+      <div class="form-container">
+        <form action="" novalidate>
+          <ul style="list-style-type: none;">
+            <li>
+              <label for="f-name" class="visually-hidden">First Name</label>
+              <input type="text" name="f-name" id="f-name" placeholder="First Name" required>
+              <img class="error" src="./images/icon-error.svg" alt="">
+              <p class="error" id="f-name-error" aria-live="polite">aa</p>
+            </li>
+            <li>
+              <label for="l-name" class="visually-hidden">Last Name</label>
+              <input type="text" name="l-name" id="l-name" placeholder="Last Name" required>
+              <img class="error" src="./images/icon-error.svg" alt="">
+              <p class="error" id="l-name-error" aria-live="polite">First Name cannot be empty</p>
+            </li>
+            <li>
+              <label for="email" class="visually-hidden">Email Address</label>
+              <input type="email" name="email" id="email" placeholder="Email Address" required>
+              <img class="error" src="./images/icon-error.svg" alt="">
+              <p class="error" aria-live="polite">First Name cannot be empty</p>
+            </li>
+            <li>
+              <label for="password" class="visually-hidden">Password</label>
+              <input type="password" name="password" id="password" placeholder="Password" required>
+              <img class="error" src="./images/icon-error.svg" alt="">
+              <p class="error" aria-live="polite">First Name cannot be empty</p>
+            </li>
+            <li>
+              <button type="submit" id="submit" value="Claim your free trial">Claim your free trial</button>
+            </li>
+          </ul>
+        </form>
+        <p class="terms">By clicking the button, you are agreeing to our <a href="">Terms and Services</a></p>
+      </div>
+    </section>
   </main>
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">pow4h</a>.
     </p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
