--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <body>
   <main>
     <section>
-      <hgroup>
+      <div class="descr-cont">
         <h1>Learn to code by watching others</h1>
         <p>
           See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
           but understanding how developers think is invaluable.
         </p>
-      </hgroup>
+      </div>
       <p class="try-it"><strong>Try it free 7 days</strong> <span>then $20/mo. thereafter</span></p>
       <div class="form-container">
         <form action="" novalidate>
